# sambo

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-07-21_15-38_fa831c2d1f8f_add_expense_table.py  2024-07-21_16-36_5c8d981cae76_add_expense_table.py  2024-07-21_720c606ad382_initial.py  2024-08-06_00-15_0f69948fc20b_add_board_and_participation.py  2024-09-29_17-08_623197337f74_add_participation_created_by.py  2024-09-29_20-51_02820993ddbf_add_expense_participation_created_by.py  c618f6d5b5eb_initial.py
sambo/: __init__.py  auth.py  conftest.py  crud.py  database.py  db.py  main.py  models.py  schemas.py
sambo/auth/: __init__.py  config.py  dependencies.py  models.py  router.py  router_test.py  schemas.py  schemas_test.py  service.py
sambo/expenses/: __init__.py  dependencies.py  models.py  router.py  router_test.py  schemas.py  service.py
sambo/testlib/: __init__.py  auth.py  db.py  expenses.py  faker.py  pytest.py
scripts/: create_user.py
